# SiClock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: display.afphoto
faces/: LICENSE  config.json
faces/elegant/: clock.afphoto
faces/elegant_dark/: clock.afphoto
faces/minimalist/: clock.afphoto
src/: application.cpp  application.h  clock.cpp  clock.h  config.cpp  config.h  functions.h  main.cpp  state.cpp  state.h
